# sval

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: buffer.yml  derive.yml  dynamic.yml  flatten.yml  fmt.yml  json.yml  nested.yml  ref.yml  rust.yml  serde.yml  sval.yml  sval_json.yml  sval_stack.yml  test.yml
benches/: owned.rs  stack.rs
benches/json/: Cargo.toml  lib.rs
buffer/: Cargo.toml  README.md
buffer/benches/: value.rs
buffer/src/: error.rs  fragments.rs  lib.rs  stream.rs  value.rs
buffer/src/stream/: flat.rs  flat_enum.rs
ci/: beta.sh  nightly.sh  publish-docs.sh  stable.sh  test.sh  thumbv6m.sh  travis.sh
derive/: Cargo.toml  README.md
derive/src/: attr.rs  bound.rs  lib.rs  value.rs
derive/test/: Cargo.toml  lib.rs
derive/test/compile_fail/: enum_dynamic_unindexed_variants.rs  enum_dynamic_unindexed_variants.stderr  enum_dynamic_unlabeled_variants.rs  enum_dynamic_unlabeled_variants.stderr  enum_unindexed_fields.rs  enum_unindexed_fields.stderr  enum_unlabeled_fields.rs  enum_unlabeled_fields.stderr  invalid_attr_container.rs  invalid_attr_container.stderr  invalid_attr_newtype_field_index.rs  invalid_attr_newtype_field_index.stderr  invalid_attr_struct_field_index.rs  invalid_attr_struct_field_index.stderr  invalid_attr_struct_field_partially_indexed.rs  invalid_attr_struct_field_partially_indexed.stderr  invalid_attr_tuple_field_label.stderr  invalid_attr_tuple_field_partially_labeled.rs  invalid_attr_tuple_field_partially_labeled.stderr  newtype_data_tag.rs  newtype_data_tag.stderr  newtype_index.rs  newtype_index.stderr  newtype_label.rs  newtype_label.stderr  newtype_tag.rs  newtype_tag.stderr  record_as_seq_incomplete_indexes.rs  record_as_seq_incomplete_indexes.stderr  record_as_seq_incomplete_labels.rs  record_as_seq_incomplete_labels.stderr  record_as_tuple_incomplete_labels.rs  record_as_tuple_incomplete_labels.stderr  ref_invalid_syntax.rs  ref_invalid_syntax.stderr  ref_multiple_lifetimes.rs  ref_multiple_lifetimes.stderr  ref_no_lifetime.rs  ref_no_lifetime.stderr  tuple_incomplete_labels.rs  (+5 more)
derive_macros/: Cargo.toml  README.md
derive_macros/src/: attr.rs  bound.rs  codegen.rs  derive.rs  index.rs  label.rs  lib.rs  lifetime.rs  stream.rs  tag.rs  value.rs  value_trait.rs
derive_macros/src/derive/: derive_enum.rs  derive_newtype.rs  derive_struct.rs  derive_unit_struct.rs  derive_void.rs
derive_macros/src/stream/: stream_newtype.rs  stream_record_tuple.rs  stream_tag.rs
dynamic/: Cargo.toml  README.md
dynamic/src/: lib.rs  stream.rs  value.rs
examples/: extract_field.rs  tags.rs  value_derive.rs
examples/serde_value/: Cargo.toml
examples/serde_visit/: Cargo.toml
examples/stream/: simple.rs
examples/sval_stream/: Cargo.toml
examples/sval_stream/src/: main.rs
examples/sval_value/: Cargo.toml
examples/val_visit/: Cargo.toml
examples/val_visit/src/: main.rs
experiments/: Cargo.toml
experiments/src/: json.rs
experiments/src/json/: from_slice.rs
flatten/: Cargo.toml  README.md
flatten/bench/: Cargo.toml  lib.rs
flatten/src/: error.rs  flattener.rs  index.rs  label.rs  lib.rs  map.rs  record.rs  record_tuple.rs  seq.rs  tuple.rs
fmt/: Cargo.toml  README.md
fmt/src/: lib.rs  tags.rs  to_debug.rs  to_fmt.rs  to_string.rs  to_text_fragments.rs  to_value.rs  to_write.rs  token_write.rs  writer.rs
fmt/test/: Cargo.toml  lib.rs
json/: Cargo.toml  README.md
json/bench/: Cargo.toml  lib.rs
json/benches/: Cargo.toml
json/benches/src/: lib.rs
json/benches/twitter/: Cargo.toml  lib.rs
json/src/: error.rs  fmt.rs  lib.rs  std_support.rs  tags.rs  to_fmt.rs  to_string.rs  to_writer.rs  value.rs
json/test/: Cargo.toml  lib.rs
json/tests/: Cargo.toml
json/tests/src/: lib.rs
json/tests/twitter/: Cargo.toml  lib.rs
nested/: Cargo.toml
nested/src/: error.rs  flat.rs  flat_enum.rs  lib.rs
ref/: Cargo.toml
ref/src/: lib.rs  seq.rs
scratch/: Cargo.toml  README.md
scratch/val_trait_obj/: Cargo.toml
serde/: Cargo.toml  README.md
serde/src/: lib.rs  to_serialize.rs  to_value.rs
serde/src/v1/: mod.rs  to_serialize.rs  to_value.rs
serde/test/: Cargo.toml  lib.rs
serde/tests/alloc/: Cargo.toml
serde/tests/no_alloc/: Cargo.toml  lib.rs
src/: data.rs  derive.rs  error.rs  lib.rs  result.rs  stream.rs  test.rs  value.rs
src/collect/: mod.rs  owned.rs  stack.rs  value.rs
src/data/: binary.rs  map.rs  number.rs  option.rs  seq.rs  tags.rs  text.rs
src/fmt/: mod.rs  to_debug.rs
src/owned/: ident.rs  mod.rs  source.rs  str.rs  stream.rs  tag.rs  value.rs
src/serde/: error.rs  mod.rs  to_serialize.rs  to_value.rs
src/stream/: error.rs  fmt.rs  ident.rs  meta.rs  mod.rs  owned.rs  source.rs  stack.rs  stack2.rs  tag.rs  value.rs
src/value/: collect.rs  impls.rs  mod.rs  owned.rs  stream.rs
stack/: Cargo.toml
stack/src/: error.rs  lib.rs  stack.rs  stack2.rs
sval/: Cargo.toml
sval/benches/: mod.rs
sval/src/: error.rs  lib.rs  stream.rs  test.rs
sval_derive/: Cargo.toml
sval_derive/src/: attr.rs  bound.rs  lib.rs  value.rs
sval_json/: Cargo.toml
sval_json/benches/: Cargo.toml  lib.rs  to_string.rs
sval_json/benches/src/: lib.rs
sval_json/src/: fmt.rs  lib.rs  std_support.rs
test/: Cargo.toml  README.md
test/src/: lib.rs
tests/: Cargo.toml
tests/derive/: Cargo.toml  lib.rs
tests/fmt/: Cargo.toml  lib.rs
tests/fmtbin/: Cargo.toml
tests/fmtbin/src/: main.rs
tests/serde/: Cargo.toml
tests/serde_alloc/: Cargo.toml  lib.rs
tests/serde_no_alloc/: Cargo.toml  lib.rs
tests/serde_no_std/: Cargo.toml  lib.rs
tests/serde_std/: Cargo.toml
tests/serde_value/: Cargo.toml
tests/serde_value/src/: lib.rs
tests/serde_visit/: Cargo.toml
tests/serde_visit/src/: main.rs
tests/src/: derive.rs  fmt.rs  lib.rs
tests/typelib/: Cargo.toml
tests/typelib/src/: lib.rs
tests/val_value/: Cargo.toml
tests/val_value/src/: lib.rs
tests/val_visit/: Cargo.toml
tests/val_visit/src/: main.rs
val/: Cargo.toml
val/src/: error.rs  impls.rs  lib.rs  serde.rs  value.rs  visit.rs
val_serde/: Cargo.toml
val_serde/src/: lib.rs  (+3 more)
(+30 files in other folders)
