[workspace]
members = [
    "derive",
    "tests/serde_alloc",
    "tests/serde_no_alloc",
    "tests/fmt",

    "json",
    "json/benches/twitter",
    "json/tests/twitter",

    "stack",
]

[package]
name = "sval"
version = "1.0.0-alpha.5"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
documentation = "https://docs.rs/sval"
description = "A no-std, object-safe serialization framework"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
exclude = [
    ".travis.yml",
    "ci/*"
]
license = "Apache-2.0 OR MIT"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[package.metadata.docs.rs]
features = ["derive", "serde", "fmt", "test", "std"]

[features]
# Support the standard library
std = ["alloc"]

# Support alloc
alloc = []

# Add a custom derive for `Value`
derive = ["sval_derive"]

# Support integration with `core::fmt`
fmt = []

# Support integration with `serde`
# Any future versions of `serde` will be added to this feature
serde = ["serde1"]

# Support integration with just `serde` `1.0`
serde1 = ["serde1_lib"]

# Support streaming values as tokens
# that can be inspected in tests
test = ["std"]

[dependencies.serde1_lib]
version = "1.0.104"
optional = true
default-features = false
package = "serde"

[dependencies.sval_derive]
version = "1.0.0-alpha.5"
path = "./derive"
optional = true

[dev-dependencies.wasm-bindgen]
version = "0.2"

[dev-dependencies.wasm-bindgen-test]
version = "0.3"

[profile.release]
debug = true
