[package]
name = "sval"
version = "2.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval"
description = "Streaming, structured value serialization"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[package.metadata.docs.rs]
features = ["std"]

[workspace]
members = [
    "derive",
    "dynamic",
    "fmt",
    "fmt/test",
    "buffer",
    "serde",
    "serde/test",
    "json",
    "json/test",
    "test",
    "experiments",
]

[features]
std = ["alloc"]
alloc = []

[dev-dependencies.sval_derive]
path = "derive"

[dev-dependencies.humantime]
version = "2"
