[package]
name = "sval_buffer"
version = "2.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_buffer"
description = "Value buffering for sval"
repository = "https://github.com/sval-rs/sval"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[package.metadata.docs.rs]
features = ["std"]

[features]
default = ["alloc"]
std = ["alloc", "sval/std"]
alloc = ["sval/alloc"]

[dependencies.sval]
version = "2.0.0"
path = "../"

[dev-dependencies.sval_derive]
version = "2.0.0"
path = "../derive"

[dev-dependencies.sval_test]
version = "2.0.0"
path = "../test"
