[package]
name = "sval_derive"
version = "2.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_derive"
description = "Derive support for sval"
repository = "https://github.com/sval-rs/sval"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[lib]
proc-macro = true

[dependencies.syn]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.proc-macro2]
version = "1"
