[package]
name = "sval_derive"
version = "2.6.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_derive"
description = "Derive support for sval"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[features]
alloc = ["sval_flatten?/alloc"]
std = ["sval_flatten?/std"]
flatten = ["dep:sval_flatten", "sval_derive_macros/flatten"]

[dependencies.sval_derive_macros]
version = "2.6.1"
path = "../derive_macros"

[dependencies.sval_flatten]
path = "../flatten"
optional = true
