[package]
name = "sval_derive_macros"
version = "2.9.2"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_derive"
description = "Minimal derive support for `sval`"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[lib]
proc-macro = true

[features]
flatten = []

[dependencies.syn]
version = "2"
features = ["derive", "parsing", "extra-traits"]

[dependencies.quote]
version = "1"

[dependencies.proc-macro2]
version = "1"
