[package]
name = "sval_dynamic"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_dynamic"
description = "Object-safe versions of sval::Stream and sval::Value"
repository = "https://github.com/sval-rs/sval"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[dependencies.sval]
version = "2.0.0"
path = "../"
