[package]
name = "sval_dynamic"
version = "2.13.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_dynamic"
description = "Object-safe versions of sval::Stream and sval::Value"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[dependencies.sval]
version = "2.13.1"
path = "../"
