[package]
name = "sval_flatten"
version = "2.8.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_flatten"
description = "Value flattening for sval"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[features]
alloc = ["sval/alloc", "sval_buffer/alloc"]
std = ["alloc", "sval/std", "sval_buffer/std"]

[dependencies.sval]
version = "2.8.0"
path = "../"
default-features = false

[dependencies.sval_buffer]
version = "2.8.0"
path = "../buffer"
default-features = false

[dependencies.itoa]
version = "1"

[dependencies.ryu]
version = "1"

[dev-dependencies.sval_test]
path = "../test"

[dev-dependencies.sval_derive_macros]
path = "../derive_macros"
