[package]
name = "sval_json"
version = "0.1.3"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
documentation = "https://docs.rs/sval_json"
description = "Json support for the sval serialization framework"
repository = "https://github.com/sval-rs/sval"
license = "Apache-2.0 OR MIT"
keywords = ["serialization", "json", "no_std"]
categories = ["encoding", "no-std"]
readme = "../README.md"

[package.metadata.docs.rs]
features = ["std"]

[badges]
travis-ci = { repository = "KodrAus/sval" }

[features]
std = ["sval/std"]

[dependencies.sval]
version = "0.1.3"
path = "../"

[dependencies.ryu]
version = "0.2"

[dependencies.itoa]
version = "0.4"
default-features = false
