[package]
name = "sval_json"
version = "0.5.2"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
documentation = "https://docs.rs/sval_json"
description = "JSON support for the sval serialization framework"
repository = "https://github.com/sval-rs/sval"
license = "Apache-2.0 OR MIT"
keywords = ["serialization", "json", "no_std"]
categories = ["encoding", "no-std"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["std"]

[badges]
travis-ci = { repository = "KodrAus/sval" }

[features]
# Support the standard library
std = ["sval/std"]

[dependencies.sval]
version = "0.5.2"
path = "../"

[dependencies.ryu]
version = "1"

[dependencies.itoa]
version = "0.4"
features = ["i128"]
default-features = false
