[package]
name = "sval_json"
version = "2.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_json"
description = "JSON support for sval"
repository = "https://github.com/sval-rs/sval"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[package.metadata.docs.rs]
features = ["std"]

[features]
std = ["alloc", "sval/std"]
alloc = ["sval/alloc"]

[dependencies.sval]
version = "2.0.0"
path = "../"

[dependencies.ryu]
version = "1"

[dependencies.itoa]
version = "0.4"
features = ["i128"]
default-features = false
