[package]
name = "sval_nested"
version = "2.15.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_nested"
description = "A recursive variant of sval"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[package.metadata.docs.rs]
features = ["std"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(no_debug_assertions)'] }

[features]
default = ["alloc"]
std = ["alloc", "sval/std", "sval_buffer/std"]
alloc = ["sval/alloc", "sval_buffer/alloc"]
no_debug_assertions = []

[dependencies.sval]
version = "2.15.0"
path = "../"

[dependencies.sval_buffer]
version = "2.15.0"
path = "../buffer"
default-features = false

[dependencies.sval_ref]
version = "2.15.0"
path = "../ref"

[dev-dependencies.sval_derive_macros]
version = "2.15.0"
path = "../derive_macros"
