[package]
name = "sval_ref"
version = "2.1.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_ref"
description = "A variant of sval::Value for types with internal references"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[features]
std = ["alloc", "sval/std"]
alloc = ["sval/alloc"]

[dependencies.sval]
version = "2.1.1"
path = "../"

[dev-dependencies.sval_test]
version = "2.1.1"
path = "../test"
