[package]
name = "sval_serde"
version = "2.11.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_serde"
description = "Integration between serde::Serialize and sval::Value"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[package.metadata.docs.rs]
features = ["std"]

[features]
std = ["alloc", "serde/std", "sval/std", "sval_nested/std"]
alloc = ["serde/alloc", "sval/alloc", "sval_nested/alloc"]

[dependencies.sval]
version = "2.11.1"
path = "../"

[dependencies.sval_nested]
version = "2.11.1"
path = "../nested"
default-features = false

[dependencies.serde]
version = "1"
default-features = false
