[package]
name = "sval_json"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"

[features]
std = ["sval/std"]

[dependencies.sval]
path = "../sval"

[dependencies.ryu]
version = "0.2"

[dependencies.itoa]
version = "0.4"

[dev-dependencies.serde]
version = "1"

[dev-dependencies.serde_derive]
version = "1"

[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.miniserde]
version = "0.1"
