[package]
name = "sval_test"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval"
description = "Utilities for testing sval::Value implementations"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[dependencies.sval]
version = "2.0.0"
path = "../"
features = ["alloc"]
