[package]
name = "sval_test"
version = "2.3.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_test"
description = "Utilities for testing sval::Value implementations"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[dependencies.sval]
version = "2.3.0"
path = "../"
features = ["std"]

[dev-dependencies.sval_dynamic]
version = "2.3.0"
path = "../dynamic"
