[package]
name = "json"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.miniserde]
version = "0.1"

[dependencies.sval]
path = "../../sval"
features = ["std"]

[dependencies.sval_json]
path = "../../sval_json"
