[package]
name = "sval_stream"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
publish = false

[dependencies.sval]
path = "../../sval"
features = ["serde"]

[dependencies.sval_value]
path = "../sval_value"

[dependencies.serde_value]
path = "../serde_value"

[dependencies.serde_json]
version = "~1"
