[package]
name = "val_visit"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
publish = false

[dependencies.val]
path = "../../val"

[dependencies.val_serde]
path = "../../val_serde"

[dependencies.val_value]
path = "../val_value"

[dependencies.serde_value]
path = "../serde_value"
