[package]
name = "sval_json_bench"
version = "0.0.0"
publish = false
edition = "2021"

[lib]
path = "lib.rs"

[dependencies.rustversion]
version = "1"

[dependencies.sval]
path = "../../"
features = ["std"]

[dependencies.sval_derive]
path = "../../derive"
features = ["std"]

[dependencies.sval_json]
path = "../"
features = ["std"]

[dependencies.sval_dynamic]
path = "../../dynamic"

[dependencies.sval_buffer]
path = "../../buffer"
features = ["std"]

[dependencies.sval_serde]
path = "../../serde"
features = ["std"]

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.erased-serde]
version = "0.3"

[dependencies.miniserde]
version = "0.1"
