[package]
name = "sval_json_tests"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
publish = false

[dependencies.sval]
path = "../../"
features = ["derive", "serde", "test"]

[dependencies.sval_json]
path = "../"
features = ["std"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.miniserde]
version = "0.1"

[dependencies.valuable]
git = "https://github.com/tokio-rs/valuable"
branch = "taiki-e/json"
features = ["derive"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen-test]
version = "0.3"
