[package]
name = "sval_json_benches"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies.sval]
path = "../../sval"
features = ["serde"]

[dependencies.sval_json]
path = "../"
features = ["std"]

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.miniserde]
version = "0.1"
