[package]
name = "sval_serde_tests"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[features]
fmt-consistency = ["sval/fmt"]

[dependencies.sval]
path = "../../"
features = ["derive", "test", "serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_test]
version = "1"
