[package]
name = "sval_serde_alloc_tests"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies.sval]
path = "../../"
features = ["derive", "test", "serde", "alloc"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_test]
version = "1"
