[package]
name = "sval_serde_no_alloc_tests"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies.sval]
path = "../../"
features = ["derive", "serde", "test"]

[dependencies.serde]
version = "1"
default-features = false
